Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31344

TabView can enter an infinite focus loop on Mac

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.1.0 RC1
    • 5.0.0 Beta 1
    • Quick: Controls 1
    • None
    • Mac OSX
    • macOS
    • qtdeclarative/63f83fbd095415145ad124c7215f07a4c3c6038f, qtqc/960a78ae6231767a34a6e4de76bf4fa28ff401f1

      If you create a simple TabView even with just one Tab in it and you enable the default Mac behavior where tab focus only affects list of Text Fields, it will enter a live loop the moment you press a tab button.

      Example:

       
      ApplicationWindow {
          title: "Component Gallery"
      
          width: 580
          height: 400
          TabView {
              id:frame
             anchors.fill: parent
      
              Tab {
                  id: controlPage
                  title: "Control"
              }
              Tab {
                  title: "Itemviews"
              }
          }
      }
      

      It goes to an infinite loop in QQuickItemPrivate::nextPrevItemInTabFocusChain().

        For Gerrit Dashboard: QTBUG-31344
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes